# python-fastapi-boilerplate

./: .gitignore  README.md  alembic.ini  manage.py  pyproject.toml
app/: main.py
app/bootstrap/: container.py  create_app.py
app/config/: __init__.py
app/http/controllers/: __init__.py  auth_controller.py  health_controller.py  user_controller.py
app/http/middlewares/: auth.py
app/http/requests/: __init__.py  signin.py
app/http/responses/: __init__.py  access_token.py  me.py  status.py
app/libraries/: __init__.py  hash.py  llm_result_parser.py
app/models/: base.py  user.py
app/models/types/: __init__.py  uuid.py
app/repositories/: base_repository.py  user_repository.py
app/services/: user_service.py
database/migrations/versions/: 7a1cbf774557_create_users_table.py
database/seeds/: __init__.py  base_seeder.py  user_seeder.py
migrations/: env.py
migrations/versions/: 7a1cbf774557_create_users_table.py
tests/libraries/: test_llm_result_parser.py
